fix: layout, delete any, modify getCroppedText (#14)
* fix: layout, delete any, modify getCroppedText

* fix: interfaces IRepository and UI interfaces

---------

--- a/src/components/UI/Buttons/Button/style.css
+++ b/src/components/UI/Buttons/Button/style.css
@@ -14,3 +14,12 @@
   color: #ffffff;
   white-space: nowrap;
 }
+
+.standart-button:hover {
+  background: #e47f73;
+}
+
+.standart-button:disabled {
+  cursor: default;
+  background: #ccc;
+}
