--- a/src/components/UI/Buttons/NavigateButton/style.css
+++ b/src/components/UI/Buttons/NavigateButton/style.css
@@ -16,3 +16,7 @@
   line-height: 14px;
   color: #3a3a3a;
 }
+
+.navigate-button:hover {
+  background: #eeeeee;
+}
